examples/valid/program70.c
int main() {
    int x;
    int y;
    int z;
    x = 5;
    y = 10;
    z = (x + y) * 2;
    return z;
}

