examples/invalid/program4.c
int main(void) {
    int x = 5;
    y = 10;
    return x + y;
}

